<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.viraj.wsg.About_wce">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="Walchand College Of Engineering Sangli"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/w" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_book_open"
                android:tint="@color/header_colour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:text="About"
                android:textColor="@color/header_colour"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/view"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/aboutwce1"
            android:textSize="18sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/view"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/aboutwce2"
            android:textSize="18sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/view"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/aboutwce3"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/view"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/aboutwce4"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:background="@color/header_colour">

        </View>
    </LinearLayout>
</ScrollView>
</LinearLayout>
