<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:showIn="@layout/app_bar_for_all_detail_pages">

        <ImageView
            android:id="@+id/image_3_dp"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:cropToPadding="false"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/hotel_dp"></ImageView>

        <TextView
            android:id="@+id/text_3_messCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/ashirwad_cat"
            android:textSize="18sp"
            android:textColor="@color/small_hrader" />

        <View
            android:id="@+id/line_3_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@color/view"
            android:layout_marginTop="12dp"
           ></View>
        <LinearLayout
            android:id="@+id/textLayout_3_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_3_fees_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Fees :-"
                android:textSize="18sp"
                android:textColor="@color/small_hrader"/>
            <TextView
                android:id="@+id/text_3_fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="17sp"
                android:text="@string/jain_fees" />
        </LinearLayout>

        <View
            android:id="@+id/line_3_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@color/view"
            android:layout_marginTop="12dp"
           ></View>

        <TextView
            android:id="@+id/text_3_address_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="Address :-"
            android:textColor="@color/header_colour"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/text_3_address_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/jain_add"
            android:textSize="17sp" />

        <View
            android:id="@+id/line_3_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@color/view"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"></View>
        <LinearLayout
            android:id="@+id/textLayout_3_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone: "
                android:textSize="18sp"
                android:textColor="@color/header_colour"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/text_3_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="17sp"
                android:text="@string/jain_phone" />
        </LinearLayout>

        <View
            android:id="@+id/line_3_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@color/view"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"></View>

        <TextView
            android:id="@+id/text_3_extraHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:text="What to Eat?"
            android:textSize="18sp"
            android:textColor="@color/small_hrader" />

        <TextView
            android:id="@+id/text_3_extraText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/jain_eat"
            android:textSize="17sp"
            android:layout_marginRight="25dp"/>

        <View
            android:id="@+id/line_3_5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@color/view"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"></View>
        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Comments:-"
            android:textColor="@color/small_hrader"
            android:textSize="18sp"
            android:layout_marginRight="25dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scrollbarStyle="insideOverlay"
            android:id="@+id/theList"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="15dp"
            android:clickable="true"></ListView>

    </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentBottom="true">


            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/ET_comment"
                android:hint="Type your comment"
                android:background="@drawable/comment_bg"
                android:layout_marginRight="5dp"
                android:drawablePadding="50dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"

                />
            <Button
                android:id="@+id/commentButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="Comment"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:onClick="Addcomment"
                android:background="@drawable/button_bg"/>
        </LinearLayout>

    </RelativeLayout>
